--- a/www/index.html
+++ b/www/index.html
@@ -4,13 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OnStage</title>
+    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/main_page.css">
 </head>
 <body>
     <div id="header">
         <h1>Schermi:</h1>
     </div>
     <div id="content">
-
+        <div class="screen-icon">
+            <p>0</p>
+        </div>
+        <div class="screen-icon">
+            <p>1</p>
+        </div>
+        <div class="screen-icon">
+            <p>2</p>
+        </div>
+        <div class="screen-icon">
+            <p>3</p>
+        </div>
+        <div class="screen-icon">
+            <p>4</p>
+        </div>
+        <div class="screen-icon">
+            <p>5</p>
+        </div>
+        <div class="screen-icon">
+            <p>6</p>
+        </div>
+        <div class="screen-icon">
+            <p>7</p>
+        </div>
+        <div class="screen-icon">
+            <p>8</p>
+        </div>
     </div>
 
 </body>
