finito(??) layout editor

--- a/www/editor.html
+++ b/www/editor.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div id="content">
-        <div id="header"></div>
+        <div id="header">
+            <h4>Schermo: X</h4>
+            <button id="returnButton">Indietro</button>
+        </div>
         <div id="slideCarousel">
             <div class="carouselSlide">
             </div>
