Fino allo scorrimento slides

--- a/www/editor.html
+++ b/www/editor.html
@@ -14,24 +14,6 @@
             <button id="returnButton">Indietro</button>
         </div>
         <div id="slideCarousel">
-            <div class="carouselSlide">
-            </div>
-            <div class="carouselSlide">
-            </div>
-            <div class="carouselSlide">
-            </div>
-            <div class="carouselSlide">
-            </div>
-            <div class="carouselSlide active">
-            </div>
-            <div class="carouselSlide">
-            </div>
-            <div class="carouselSlide">
-            </div>
-            <div class="carouselSlide">
-            </div>
-            <div class="carouselSlide">
-            </div>
         </div>
         <div id="slideEditorArea">
             <div id="slideEditor"></div>
@@ -68,8 +50,8 @@
             crossorigin="anonymous">
     </script>
     <script src="assets/js/index.js"></script>
-    <script src="assets/js/layout.js"></script>
+    <script src="assets/js/layout.js" defer></script>
     <script src="assets/js/loadFiles.js"></script>
-    <script src="assets/js/slides.js"></script>
+    <script src="assets/js/controller.js"></script>
 </body>
 </html>
