--- a/www/editor.html
+++ b/www/editor.html
@@ -49,9 +49,9 @@
             integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+"
             crossorigin="anonymous">
     </script>
-    <script src="assets/js/index.js"></script>
+    <script src="assets/js/index.js" defer></script>
     <script src="assets/js/layout.js" defer></script>
-    <script src="assets/js/loadFiles.js"></script>
-    <script src="assets/js/controller.js"></script>
+    <script src="assets/js/loadFiles.js" defer></script>
+    <script src="assets/js/controller.js" defer></script>
 </body>
 </html>
