Aggiunto selettore overflow

--- a/www/editor.html
+++ b/www/editor.html
@@ -34,6 +34,11 @@
                     <option value="1/1">1:1</option>
                     <option value="5/3">5:3</option>
                 </select>
+                <select name="overflow" class="userInteract" id="overflowBVRchanger">
+                    <option value="ritaglia">Ritaglia</option>
+                    <option value="riduci">Riduci</option>
+                    <option value="adatta">Adatta</option>
+                </select>
                 <div>
                     <input type="checkbox" id="slideLoop">
                     <label for="slideLoop">Loop delle slide</label>
