--- a/www/editor.html
+++ b/www/editor.html
@@ -22,8 +22,9 @@
             <div class="pulsantiera">
                 <input type="file" hidden id="fileSelector"/>
                 <button id="fileSelectorButton">Scegli un file</button>
+                <!--
                 <button id="Carica_Sfondo">Carica sfondo</button>
-                <button id="Carica_Miniatura">Carica miniatura</button>
+                <button id="Carica_Miniatura">Carica miniatura</button>-->
             </div>
             <div class="screenControls">
                 <div class="durationSetter">
